# rocket-sea-orm-starter

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  Rocket.toml
api/: Cargo.toml
api/src/: authentication.rs  error.rs  lib.rs  types.rs
api/src/routes/: mod.rs
api/src/routes/auth/: mod.rs
api/src/routes/progress/: mod.rs
api/src/routes/task/: mod.rs
db/: Cargo.toml
db/src/: lib.rs  pool.rs
db/src/migrations/: create_tables.rs
db/src/tables/: mod.rs  progress.rs  task.rs  user.rs
rocket/: Cargo.toml
rocket/src/: lib.rs
serde/: Cargo.toml
serde/src/: lib.rs
src/: main.rs
tests/: mod.rs
tests/common/: mod.rs
tests/task/: mod.rs
utils/: Cargo.toml
utils/src/: get_config_by_figment.rs  lib.rs
